--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 <body>
     <!-- header -->
     <header>
-        <h1 class="text-color yellow">il nostro modello di punta</h1>
+        <div class="container">
+            <section class="img1" ></section>
+                <div class="red">
+                    <img src="./img/01.png" alt="">
+                    <h1 class="text-color yellow">il nostro modello di punta</h1>         
+                </div>
+            </section>                
+        </div>
     </header>
-    <!-- nav -->
-    <nav></nav>
+   
 </body>
 </html>
