--- a/index.html
+++ b/index.html
@@ -11,17 +11,35 @@
 
 </head>
 <body>
-    <!-- header -->
-    <header>
-        <div class="container">
-            <section class="img1" ></section>
-                <div class="red">
-                    <img src="./img/01.png" alt="">
-                    <h1 class="text-color yellow">il nostro modello di punta</h1>         
-                </div>
-            </section>                
-        </div>
-    </header>
-   
+
+    <!-- main -->
+    <main>
+        <nav id="nav-menu">
+            <ul>
+                <li><a href="#red-section">1</a></li>
+                <li><a href="#green-section">2</a></li>
+                <li><a href="#yellow-section">3</a></li>
+            </ul>
+        </nav>
+        <section id="red-section" class="full-screen big-red text-yellow">
+            <div class="content">
+                <img src="./img/01.png" alt="shoes1">
+                <h2>il nostro modello di punta</h2>
+            </div>
+        </section>
+        <section id="green-section" class="full-screen big-green text-yellow">
+            <div class="content">
+                <img src="./img/02.png" alt="shoes2">
+                <h2>il nostro modello di punta</h2>
+            </div>
+        </section>
+        <section id="yellow-section" class="full-screen big-yellow text-green">
+            <div class="content">
+                <img src="./img/03.png" alt="shoes3">
+                <h2>il nostro modello di punta</h2>
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
